k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sc-og-deployment
  namespace: utils
  labels:
    app: sc-og
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sc-og
  template:
    metadata:
      labels:
        app: sc-og
    spec:
      containers:
        - name: sc-og
          image: replaceme
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
            limits:
              cpu: 3000m
              memory: 2.5Gi
          ports:
            - containerPort: 3000
          imagePullPolicy: "Always"
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
