k8s/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: sc-og-service
  namespace: utils
spec:
  selector:
    app: sc-og
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
