k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sc-og-ingress
  namespace: utils
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/upstream-hash-by: $realip_remote_addr
spec:
  tls:
    - hosts:
        - og.stablecog.com
      secretName: og-stablecog-com-secret
  rules:
    - host: og.stablecog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sc-og-service
                port:
                  number: 3000
